lab-numpy-en-solved

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy version: 1.24.4\n",
+      "openblas64__info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "blas_ilp64_opt_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "openblas64__lapack_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "lapack_ilp64_opt_info:\n",
+      "    libraries = ['openblas64_', 'openblas64_']\n",
+      "    library_dirs = ['openblas\\\\lib']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None), ('BLAS_SYMBOL_SUFFIX', '64_'), ('HAVE_BLAS_ILP64', None), ('HAVE_LAPACKE', None)]\n",
+      "    runtime_library_dirs = ['openblas\\\\lib']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
+      "    not found = AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"NumPy version:\", np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# method 1: using np.random.random()\n",
+    "a = np.random.random((2, 3, 5))\n",
+    "\n",
+    "# method 2: using np.random.rand()\n",
+    "a_method2 = np.random.rand(2, 3, 5)\n",
+    "\n",
+    "# method 3: using np.random.randn()\n",
+    "a_method3 =  np.random.randn(2, 3, 5)"
    ]
   },
   {
@@ -68,11 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.1661653  0.81219888 0.36453847 0.69836094 0.76520299]\n",
+      "  [0.23732629 0.62620049 0.4648139  0.24080551 0.12889016]\n",
+      "  [0.69633406 0.42300373 0.98576263 0.23659659 0.64661012]]\n",
+      "\n",
+      " [[0.20251204 0.67847384 0.9682248  0.03103942 0.96900619]\n",
+      "  [0.18395775 0.85875034 0.67840509 0.53572915 0.02911582]\n",
+      "  [0.54258346 0.31363564 0.87521669 0.88345906 0.91433007]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))"
    ]
   },
   {
@@ -102,11 +165,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +204,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b have different shapes but the same size {a.size}\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# checking shapes\n",
+    "if a.shape == b.shape:\n",
+    "    print(f\"a and b have the same shape {a.shape} and size {a.size}\")\n",
+    "elif a.size == b.size:\n",
+    "    print(\"a and b have different shapes but the same size {a.size}\")\n",
+    "else:\n",
+    "    print(\"a and b have different shapes and sizes\")\n",
+    "# it's clear that the equality of shape guarantees the equality of size but the reverse is not true"
    ]
   },
   {
@@ -136,11 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# We get an error adding up a and b, since they have different shapes\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# We get an error adding up a and b, since they have different shapes\n",
+    "a + b"
    ]
   },
   {
@@ -154,11 +269,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.reshape(2, 3, 5)"
    ]
   },
   {
@@ -171,11 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# Now a and c have the same shape and can be added together\n",
+    "d = a + c"
    ]
   },
   {
@@ -188,12 +306,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.1661653  0.81219888 0.36453847 0.69836094 0.76520299]\n",
+      "  [0.23732629 0.62620049 0.4648139  0.24080551 0.12889016]\n",
+      "  [0.69633406 0.42300373 0.98576263 0.23659659 0.64661012]]\n",
+      "\n",
+      " [[0.20251204 0.67847384 0.9682248  0.03103942 0.96900619]\n",
+      "  [0.18395775 0.85875034 0.67840509 0.53572915 0.02911582]\n",
+      "  [0.54258346 0.31363564 0.87521669 0.88345906 0.91433007]]]\n",
+      "[[[1.1661653  1.81219888 1.36453847 1.69836094 1.76520299]\n",
+      "  [1.23732629 1.62620049 1.4648139  1.24080551 1.12889016]\n",
+      "  [1.69633406 1.42300373 1.98576263 1.23659659 1.64661012]]\n",
+      "\n",
+      " [[1.20251204 1.67847384 1.9682248  1.03103942 1.96900619]\n",
+      "  [1.18395775 1.85875034 1.67840509 1.53572915 1.02911582]\n",
+      "  [1.54258346 1.31363564 1.87521669 1.88345906 1.91433007]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "# d is simply a shifted by +1 because c contains only ones\n",
+    "# The shape of the arrays matters. Reshaping b was necessary for element-wise addition\n",
+    "# The structure of a remains unchanged in d, only the values shift \n",
+    "print(a)\n",
+    "print(d)"
    ]
   },
   {
@@ -206,11 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# The element-wise multiplication using * operator or np.multiply() works,\n",
+    "# since both arrays have the same shape (2, 3, 5)\n",
+    "e = a * c"
    ]
   },
   {
@@ -224,12 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and e are equal\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "if (e == a).any():\n",
+    "    print(\"a and e are equal\")\n",
+    "\n",
+    "# e and a are the same since c is filled entirely with ones and \n",
+    "# multiplying each element of a by 1 does not change the values."
    ]
   },
   {
@@ -243,12 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)"
    ]
   },
   {
@@ -261,11 +422,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty(d.shape)  # Creates an empty array with the same shape as d"
    ]
   },
   {
@@ -287,11 +449,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# Iterate through all elements and assign values based on conditions\n",
+    "for i in range(d.shape[0]):  \n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75"
    ]
   },
   {
@@ -325,11 +501,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array f:\n",
+      " [[[ 25.  75.  25.  75.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]\n",
+      "  [ 75.  25. 100.  25.  75.]]\n",
+      "\n",
+      " [[ 25.  75.  75.  25.  75.]\n",
+      "  [ 25.  75.  75.  25.   0.]\n",
+      "  [ 75.  25.  75.  75.  75.]]]\n",
+      "Array d:\n",
+      " [[[1.1661653  1.81219888 1.36453847 1.69836094 1.76520299]\n",
+      "  [1.23732629 1.62620049 1.4648139  1.24080551 1.12889016]\n",
+      "  [1.69633406 1.42300373 1.98576263 1.23659659 1.64661012]]\n",
+      "\n",
+      " [[1.20251204 1.67847384 1.9682248  1.03103942 1.96900619]\n",
+      "  [1.18395775 1.85875034 1.67840509 1.53572915 1.02911582]\n",
+      "  [1.54258346 1.31363564 1.87521669 1.88345906 1.91433007]]]\n",
+      "Check the computation of d_min, d_max, and d_mean!\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# Print d and f to verify the results\n",
+    "print(\"Array f:\\n\", f)\n",
+    "print(\"Array d:\\n\", d)\n",
+    "\n",
+    "# To verify if f is as expected, we can print both d and f after applying the classification rules.\n",
+    "if (f == d).any():\n",
+    "    print(\"The logic is correct\")\n",
+    "else:\n",
+    "    print(\"Check the computation of d_min, d_max, and d_mean!\")"
    ]
   },
   {
@@ -350,11 +559,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      " [[[1.1661653  1.81219888 1.36453847 1.69836094 1.76520299]\n",
+      "  [1.23732629 1.62620049 1.4648139  1.24080551 1.12889016]\n",
+      "  [1.69633406 1.42300373 1.98576263 1.23659659 1.64661012]]\n",
+      "\n",
+      " [[1.20251204 1.67847384 1.9682248  1.03103942 1.96900619]\n",
+      "  [1.18395775 1.85875034 1.67840509 1.53572915 1.02911582]\n",
+      "  [1.54258346 1.31363564 1.87521669 1.88345906 1.91433007]]]\n",
+      "\n",
+      "Array f:\n",
+      " [[['B' 'D' 'B' 'D' 'D']\n",
+      "  ['B' 'D' 'B' 'B' 'B']\n",
+      "  ['D' 'B' 'E' 'B' 'D']]\n",
+      "\n",
+      " [['B' 'D' 'D' 'B' 'D']\n",
+      "  ['B' 'D' 'D' 'B' 'A']\n",
+      "  ['D' 'B' 'D' 'D' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "# Create an empty string array with the same shape as d\n",
+    "f = np.empty(d.shape, dtype=str)\n",
+    "\n",
+    "# Populate f based on the given rules\n",
+    "for i in range(d.shape[0]):  \n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = \"A\"  # Replacing 0 with \"A\"\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = \"E\"  # Replacing 100 with \"E\"\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = \"B\"  # Replacing 25 with \"B\"\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = \"C\"  # Replacing 50 with \"C\"\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = \"D\"  # Replacing 75 with \"D\"\n",
+    "\n",
+    "# Print d and f to verify results\n",
+    "print(\"Array d:\\n\", d)\n",
+    "print(\"\\nArray f:\\n\", f)"
    ]
   }
  ],
@@ -374,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
