--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0.2\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30154\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.11\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30154\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.27\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-2f7jy5pq/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-2f7jy5pq/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.27  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Zen MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.27\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-2f7jy5pq/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-2f7jy5pq/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.27  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Zen MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-t_tu00db\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.11\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\"\n",
+      "    ],\n",
+      "    \"not found\": [\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "print(np.show_config())"
    ]
   },
   {
@@ -51,11 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.random((2, 3, 5))\n",
+    "a2 = np.random.rand(2, 3, 5)\n",
+    "a3 = np.random.randint(0, 10, (2, 3, 5))"
    ]
   },
   {
@@ -68,11 +170,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.03125449 0.86146921 0.13079443 0.62407195 0.15226565]\n",
+      "  [0.34639169 0.66998703 0.50348558 0.18183358 0.6875883 ]\n",
+      "  [0.46069541 0.71628006 0.53023978 0.6451577  0.71216019]]\n",
+      "\n",
+      " [[0.51501252 0.32931468 0.84711878 0.34082186 0.18618508]\n",
+      "  [0.27610823 0.81234654 0.84479754 0.04236517 0.5301402 ]\n",
+      "  [0.80198518 0.53690604 0.08437465 0.38239891 0.53766485]]]\n",
+      "-------------------------\n",
+      "[[[0.81062191 0.68172261 0.39683885 0.06282717 0.67126071]\n",
+      "  [0.58714243 0.60543222 0.81263742 0.7961152  0.34829117]\n",
+      "  [0.95520611 0.78512596 0.35106973 0.81036402 0.40250689]]\n",
+      "\n",
+      " [[0.57326076 0.40210416 0.10392604 0.24711736 0.01616353]\n",
+      "  [0.27675385 0.72981314 0.7652374  0.44232559 0.26720079]\n",
+      "  [0.34942951 0.89823184 0.01803836 0.70540173 0.9216234 ]]]\n",
+      "-------------------------\n",
+      "[[[6 2 7 6 3]\n",
+      "  [7 0 1 8 9]\n",
+      "  [1 1 2 5 3]]\n",
+      "\n",
+      " [[0 5 3 9 9]\n",
+      "  [9 9 8 6 3]\n",
+      "  [3 9 6 4 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)\n",
+    "print('-------------------------')\n",
+    "print(a2)\n",
+    "print('-------------------------')\n",
+    "print(a3)"
    ]
   },
   {
@@ -85,11 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))"
    ]
   },
   {
@@ -102,11 +240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +279,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n",
+      "(5, 2, 3)\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a.shape)\n",
+    "print(b.shape)\n",
+    "print(a.shape == b.shape)"
    ]
   },
   {
@@ -136,11 +309,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# No, because they have different shapes."
    ]
   },
   {
@@ -154,11 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = np.transpose(b, (1,2,0))\n",
+    "print(c.shape)"
    ]
   },
   {
@@ -171,11 +355,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.03125449 1.86146921 1.13079443 1.62407195 1.15226565]\n",
+      "  [1.34639169 1.66998703 1.50348558 1.18183358 1.6875883 ]\n",
+      "  [1.46069541 1.71628006 1.53023978 1.6451577  1.71216019]]\n",
+      "\n",
+      " [[1.51501252 1.32931468 1.84711878 1.34082186 1.18618508]\n",
+      "  [1.27610823 1.81234654 1.84479754 1.04236517 1.5301402 ]\n",
+      "  [1.80198518 1.53690604 1.08437465 1.38239891 1.53766485]]]\n",
+      "(2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "print(d)\n",
+    "print(d.shape)\n",
+    "# it worked because they have the same shape"
    ]
   },
   {
@@ -188,12 +391,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.03125449 0.86146921 0.13079443 0.62407195 0.15226565]\n",
+      "  [0.34639169 0.66998703 0.50348558 0.18183358 0.6875883 ]\n",
+      "  [0.46069541 0.71628006 0.53023978 0.6451577  0.71216019]]\n",
+      "\n",
+      " [[0.51501252 0.32931468 0.84711878 0.34082186 0.18618508]\n",
+      "  [0.27610823 0.81234654 0.84479754 0.04236517 0.5301402 ]\n",
+      "  [0.80198518 0.53690604 0.08437465 0.38239891 0.53766485]]]\n",
+      "-----------------\n",
+      "[[[1.03125449 1.86146921 1.13079443 1.62407195 1.15226565]\n",
+      "  [1.34639169 1.66998703 1.50348558 1.18183358 1.6875883 ]\n",
+      "  [1.46069541 1.71628006 1.53023978 1.6451577  1.71216019]]\n",
+      "\n",
+      " [[1.51501252 1.32931468 1.84711878 1.34082186 1.18618508]\n",
+      "  [1.27610823 1.81234654 1.84479754 1.04236517 1.5301402 ]\n",
+      "  [1.80198518 1.53690604 1.08437465 1.38239891 1.53766485]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(\"-----------------\")\n",
+    "print(d)\n",
+    "# The values of d are the values of a plus 1."
    ]
   },
   {
@@ -206,11 +434,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.03125449 0.86146921 0.13079443 0.62407195 0.15226565]\n",
+      "  [0.34639169 0.66998703 0.50348558 0.18183358 0.6875883 ]\n",
+      "  [0.46069541 0.71628006 0.53023978 0.6451577  0.71216019]]\n",
+      "\n",
+      " [[0.51501252 0.32931468 0.84711878 0.34082186 0.18618508]\n",
+      "  [0.27610823 0.81234654 0.84479754 0.04236517 0.5301402 ]\n",
+      "  [0.80198518 0.53690604 0.08437465 0.38239891 0.53766485]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "print(e)"
    ]
   },
   {
@@ -224,12 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(np.array_equal(a, e))\n",
+    "# Yes, e is equal to a because multiplying any number by 1 does not change its value."
    ]
   },
   {
@@ -243,12 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8614692114685045 1.0312544941142217 1.4773738432749737\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "print(d_max, d_min, d_mean)"
    ]
   },
   {
@@ -261,11 +525,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.03125449 0.86146921 0.13079443 0.62407195 0.15226565]\n",
+      "  [0.34639169 0.66998703 0.50348558 0.18183358 0.6875883 ]\n",
+      "  [0.46069541 0.71628006 0.53023978 0.6451577  0.71216019]]\n",
+      "\n",
+      " [[0.51501252 0.32931468 0.84711878 0.34082186 0.18618508]\n",
+      "  [0.27610823 0.81234654 0.84479754 0.04236517 0.5301402 ]\n",
+      "  [0.80198518 0.53690604 0.08437465 0.38239891 0.53766485]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty((2,3,5))\n",
+    "print(f)"
    ]
   },
   {
@@ -289,9 +569,38 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  0. 100.  25.  75.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]\n",
+      "  [ 25.  75.  75.  75.  75.]]\n",
+      "\n",
+      " [[ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]\n",
+      "  [ 75.  75.  25.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            value = d[i, j, k]\n",
+    "            if value == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif value == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif value == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "print(f)"
    ]
   },
   {
@@ -327,9 +636,34 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.03125449 1.86146921 1.13079443 1.62407195 1.15226565]\n",
+      "  [1.34639169 1.66998703 1.50348558 1.18183358 1.6875883 ]\n",
+      "  [1.46069541 1.71628006 1.53023978 1.6451577  1.71216019]]\n",
+      "\n",
+      " [[1.51501252 1.32931468 1.84711878 1.34082186 1.18618508]\n",
+      "  [1.27610823 1.81234654 1.84479754 1.04236517 1.5301402 ]\n",
+      "  [1.80198518 1.53690604 1.08437465 1.38239891 1.53766485]]]\n",
+      "_____________________________\n",
+      "[[[  0. 100.  25.  75.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]\n",
+      "  [ 25.  75.  75.  75.  75.]]\n",
+      "\n",
+      " [[ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]\n",
+      "  [ 75.  75.  25.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(\"_____________________________\")\n",
+    "print(f)"
    ]
   },
   {
@@ -350,12 +684,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['A' 'E' 'B' 'D' 'B']\n",
+      "  ['B' 'D' 'D' 'B' 'D']\n",
+      "  ['B' 'D' 'D' 'D' 'D']]\n",
+      "\n",
+      " [['D' 'B' 'D' 'B' 'B']\n",
+      "  ['B' 'D' 'D' 'B' 'D']\n",
+      "  ['D' 'D' 'B' 'B' 'D']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### [your code here]\n",
+    "f = np.empty(d.shape, dtype=str)\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            value = d[i, j, k]\n",
+    "            if value == d_min:\n",
+    "                f[i, j, k] = 'A'\n",
+    "            elif value == d_max:\n",
+    "                f[i, j, k] = 'E'\n",
+    "            elif value == d_mean:\n",
+    "                f[i, j, k] = 'C'\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i, j, k] = 'B'\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i, j, k] = 'D'\n",
+    "\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### [your code here]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -374,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
